--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "        if restaurant['rating'] > alternative['rating']: \n",
     "            return restaurant\n",
-    "        else \n",
+    "        else: \n",
     "            return alternative "
    ]
   },
