--- a/index.ipynb
+++ b/index.ipynb
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'] > alternative['price']: \n",
+    "    if restaurant['price'] < alternative['price']: \n",
     "            return restaurant\n",
     "    else: \n",
     "            return alternative \n",
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fork & Fig\n",
-      "Fork & Fig\n"
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
      ]
     }
    ],
@@ -237,9 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fork_fig['is_closed'] # False"
    ]
