Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for re\n",
+    "    for restaurant in restaurants: \n",
+    "        if restaurant: \n",
     "    pass"
    ]
   },
