Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,10 +291,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "open_r\n",
+    "open_restaurant=[]\n",
     "    for restaurant in restaurants: \n",
     "        if restaurant: \n",
-    "            open\n",
+    "            open_restaurant.append()\n",
     "    pass"
    ]
   },
