Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,9 @@
     "open_restaurant=[]\n",
     "    for restaurant in restaurants: \n",
     "        if restaurant: \n",
-    "            open_restaurant.append()\n",
+    "            open_restaurant.append(restaurant)\n",
+    "    return open        \n",
+    "            \n",
     "    pass"
    ]
   },
