Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,18 +286,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-19-981859e4730b>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-981859e4730b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    open_restaurant=[]\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "open_restaurant=[]\n",
     "    for restaurant in restaurants: \n",
     "        if restaurant: \n",
     "            open_restaurant.append(restaurant)\n",
-    "    return open        \n",
-    "            \n",
-    "    pass"
+    "    return open_restaurant         \n",
+    "            \n"
    ]
   },
   {
