Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,16 +286,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-2d1eb70eb739>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-2d1eb70eb739>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print open_restaurant()\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurant=[]\n",
     "    for restaurant in restaurants: \n",
     "        if restaurant: \n",
     "            open_restaurant.append(restaurant)\n",
-    "    return open_restaurant         \n",
+    "    return open_restaurant   \n",
+    "print open_restaurant() \n",
     "            \n"
    ]
   },
