Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,26 +286,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-2d1eb70eb739>, line 7)",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(open_restaurant['name'])? (<ipython-input-26-3e657bd77147>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-2d1eb70eb739>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print open_restaurant()\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-3e657bd77147>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print open_restaurant['name']\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(open_restaurant['name'])?\n"
      ]
     }
    ],
    "source": [
-    "def open_restaurants(restaurants):\n",
+    "def open_restaurants(restaurants_arguement):\n",
     "    open_restaurant=[]\n",
     "    for restaurant in restaurants: \n",
     "        if restaurant: \n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant   \n",
-    "print open_restaurant() \n",
+    "\n",
     "            \n"
    ]
   },
