Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,22 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(open_restaurant['name'])? (<ipython-input-26-3e657bd77147>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-3e657bd77147>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print open_restaurant['name']\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(open_restaurant['name'])?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants_arguement):\n",
     "    open_restaurant=[]\n",
-    "    for restaurant in restaurants: \n",
+    "    for restaurant in restaurants_arguement: \n",
     "        if restaurant: \n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant   \n",
@@ -311,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +311,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
