--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,11 +277,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
+       "   {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
+       "   {'alias': 'salad', 'title': 'Salad'}],\n",
+       "  'coordinates': {'latitude': 35.10871, 'longitude': -106.56739},\n",
+       "  'display_phone': '(505) 881-5293',\n",
+       "  'distance': 3571.724649307866,\n",
+       "  'id': 'fork-and-fig-albuquerque',\n",
+       "  'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/_-DpXKfS3jv6DyA47g6Fxg/o.jpg',\n",
+       "  'is_closed': False,\n",
+       "  'location': {'address1': '6904 Menaul Blvd NE',\n",
+       "   'address2': 'Ste C',\n",
+       "   'address3': '',\n",
+       "   'city': 'Albuquerque',\n",
+       "   'country': 'US',\n",
+       "   'display_address': ['6904 Menaul Blvd NE',\n",
+       "    'Ste C',\n",
+       "    'Albuquerque, NM 87110'],\n",
+       "   'state': 'NM',\n",
+       "   'zip_code': '87110'},\n",
+       "  'name': 'Fork & Fig',\n",
+       "  'phone': '+15058815293',\n",
+       "  'price': '$$',\n",
+       "  'rating': 4.5,\n",
+       "  'review_count': 604,\n",
+       "  'transactions': [],\n",
+       "  'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'},\n",
+       " {'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
+       "   {'alias': 'diners', 'title': 'Diners'},\n",
+       "   {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
+       "  'coordinates': {'latitude': 35.0808088832532,\n",
+       "   'longitude': -106.619402244687},\n",
+       "  'display_phone': '(505) 266-0550',\n",
+       "  'distance': 4033.6583235266075,\n",
+       "  'id': 'frontier-restaurant-albuquerque-2',\n",
+       "  'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
+       "  'is_closed': True,\n",
+       "  'location': {'address1': '2400 Central Ave SE',\n",
+       "   'address2': '',\n",
+       "   'address3': '',\n",
+       "   'city': 'Albuquerque',\n",
+       "   'country': 'US',\n",
+       "   'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
+       "   'state': 'NM',\n",
+       "   'zip_code': '87106'},\n",
+       "  'name': 'Frontier Restaurant',\n",
+       "  'phone': '+15052660550',\n",
+       "  'price': '$',\n",
+       "  'rating': 4.0,\n",
+       "  'review_count': 1369,\n",
+       "  'transactions': [],\n",
+       "  'url': 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "restaurants = [fork_fig, frontier_restaurant]"
+    "restaurants = [fork_fig, frontier_restaurant]\n",
+    "restaurants "
    ]
   },
   {
@@ -293,7 +355,7 @@
     "def open_restaurants(restaurants_arguement):\n",
     "    open_restaurant=[]\n",
     "    for restaurant in restaurants_arguement: \n",
-    "        if restaurant: \n",
+    "        if restaurant[: \n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant   \n",
     "\n",
