Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
     "    open_restaurant=[]\n",
     "    for restaurant in restaurants_arguement: \n",
     "       # if restaurant['is_closed']: \n",
-    "        open_restaurant.append(restaurant['Name'])\n",
+    "        open_restaurant.append(restaurant)\n",
     "    return open_restaurants   \n",
     "\n",
     "            \n"
